--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -11,7 +11,7 @@ jobs:
   test:
     runs-on: ubuntu-latest
     container:
-      image: ghcr.io/vishnu3121999/openjdk:17-slim
+      image: ghcr.io/vishnu3121999/vishnu-java:latest
       # If your Dockerfile sets up a non-root user (e.g., 'runner') and proper workspace permissions,
       # you might add options to ensure the correct user is used. For example:
       # options: --user runner
