--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -11,7 +11,7 @@ jobs:
   test:
     runs-on: ubuntu-latest
     container:
-      image: ghcr.io/vishnu3121999/vishnu-java:latest
+      image: ghcr.io/vishnu3121999/openjdk:17-slim
       credentials:
         username: vishnu3121999
         password: ${{ secrets.GH_TOKEN }}
